--- a/movies/DockerFile
+++ b/movies/DockerFile
@@ -1,8 +1,17 @@
-FROM maven:3.8.5-openjdk-17 AS build
-COPY . .
-RUN mvn clean package -DskipTests
+# Use an official OpenJDK runtime as a parent image
+FROM openjdk:17-jdk-slim
 
-FROM openjdk:17.0.1-jdk-slim
-COPY --from=build /target/movies-0.0.1-SNAPSHOT.jar movies.jar
+# Set the working directory to /app
+WORKDIR /app
+
+# Copy the current directory contents into the container at /app
+COPY . /app
+
+# Build the Spring Boot application
+RUN ./mvnw clean package -DskipTests
+
+# Make port 8080 available to the world outside this container
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","movies.jar"]
+
+# Run the JAR file when the container launches
+CMD ["java", "-jar", "target/movies.jar"]
